# prajna_kss

./: .gitignore  Dockerfile  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
prajna_kss/: app.py  test.py
tests/: test_prajna_kss.py
