[tool.poetry]
name = "prajna_kss"
version = "0.1.0"
description = ""
authors = ["sobitregmi <sobit@fusemachines.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Flask = "^1.1.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
